--- a/AutoClick/Pages/Explorar.cshtml
+++ b/AutoClick/Pages/Explorar.cshtml
@@ -75,6 +75,9 @@
                     </div>
                 </div>
 
+                <!-- Línea divisoria -->
+                <hr class="filter-divider" />
+
                 <!-- Filter Form -->
                 <form method="get" class="filters-form">
                     <input type="hidden" name="page" value="1" />
@@ -101,6 +104,9 @@
                         </select>
                     </div>
 
+                    <!-- Línea divisoria -->
+                    <hr class="filter-divider" />
+
                     <!-- Marca -->
                     <div class="filter-group">
                         <label class="filter-label">Marca</label>
@@ -123,6 +129,9 @@
                         </select>
                     </div>
 
+                    <!-- Línea divisoria -->
+                    <hr class="filter-divider" />
+
                     <!-- Rango de precio -->
                     <div class="filter-group">
                         <label class="filter-label">Rango de precio</label>
@@ -139,6 +148,9 @@
                         </div>
                     </div>
 
+                    <!-- Línea divisoria -->
+                    <hr class="filter-divider" />
+
                     <!-- Kilometraje -->
                     <div class="filter-group">
                         <label class="filter-label">Kilometraje</label>
@@ -154,6 +166,9 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Línea divisoria -->
+                    <hr class="filter-divider" />
 
                     <!-- Año -->
                     <div class="filter-group">
@@ -180,6 +195,9 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Línea divisoria -->
+                    <hr class="filter-divider" />
 
                     <!-- Additional Filters -->
                     <div class="additional-filters">
