--- a/AutoClick/Pages/Destacados.cshtml
+++ b/AutoClick/Pages/Destacados.cshtml
@@ -35,6 +35,9 @@
                                     </div>
                                 }
                             </div>
+                            
+                            <!-- Línea divisoria -->
+                            <hr class="filter-divider" />
                         }
 
                         <!-- Filter Form -->
@@ -70,6 +73,9 @@
                                 </div>
                             </div>
 
+                            <!-- Línea divisoria -->
+                            <hr class="filter-divider" />
+
                             <!-- Marca -->
                             <div class="busqueda-filter-group">
                                 <label class="busqueda-filter-label">Marca</label>
@@ -98,6 +104,9 @@
                                 </div>
                             </div>
 
+                            <!-- Línea divisoria -->
+                            <hr class="filter-divider" />
+
                             <!-- Rango de precio -->
                             <div class="busqueda-filter-group">
                                 <label class="busqueda-filter-label">Rango de precio</label>
@@ -114,6 +123,9 @@
                                 </div>
                             </div>
 
+                            <!-- Línea divisoria -->
+                            <hr class="filter-divider" />
+
                             <!-- Kilometraje -->
                             <div class="busqueda-filter-group">
                                 <label class="busqueda-filter-label">Kilometraje</label>
@@ -129,6 +141,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Línea divisoria -->
+                            <hr class="filter-divider" />
 
                             <!-- Año -->
                             <div class="busqueda-filter-group">
@@ -161,6 +176,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Línea divisoria -->
+                            <hr class="filter-divider" />
 
                             <!-- Additional Filters -->
                             <!-- Carrocería -->
