--- a/AutoClick/Pages/Producto.cshtml
+++ b/AutoClick/Pages/Producto.cshtml
@@ -1402,9 +1402,9 @@ function toggleFavorite(vehicleId) {
         
         <div class="modal-info-message">
             <p>
-                <strong>¡Gracias por tu interés!</strong> 
-                Por el momento no contamos con alianzas bancarias, pero estamos trabajando para ofrecerte las mejores opciones de financiamiento. 
-                Regístrate ahora y te contactaremos cuando tengamos una alianza disponible.
+                <strong>¡Gracias por su interés!</strong> 
+                Por el momento no contamos con alianzas bancarias, pero estamos trabajando para ofrecerle las mejores opciones de financiamiento. 
+                Regístrese ahora y lo contactaremos cuando tengamos una alianza disponible.
             </p>
         </div>
 
@@ -1414,12 +1414,12 @@ function toggleFavorite(vehicleId) {
             
             <div class="form-group">
                 <label for="nombre">Nombre <span class="required">*</span></label>
-                <input type="text" id="nombre" name="nombre" class="form-input" placeholder="Introduce tu nombre" required />
+                <input type="text" id="nombre" name="nombre" class="form-input" placeholder="Introduzca su nombre" required />
             </div>
             
             <div class="form-group">
                 <label for="apellidos">Apellidos <span class="required">*</span></label>
-                <input type="text" id="apellidos" name="apellidos" class="form-input" placeholder="Introduce tus apellidos" required />
+                <input type="text" id="apellidos" name="apellidos" class="form-input" placeholder="Introduzca sus apellidos" required />
             </div>
             
             <div class="form-group">
