--- a/AutoClick/Pages/Shared/_FooterDesktop.cshtml
+++ b/AutoClick/Pages/Shared/_FooterDesktop.cshtml
@@ -1,5 +1,5 @@
 <!-- Footer Universal -->
-<div style="width: 100%; min-height: 340px; background: #030D2B; overflow: visible; border-top: 0.50px rgba(255, 255, 255, 0.45) solid; position: relative; padding-bottom: 20px;">
+<div style="width: 100%; height: 340px; background: #030D2B; overflow: visible; border-top: 0.50px rgba(255, 255, 255, 0.45) solid; position: relative; padding-bottom: 20px;">
     <div style="left: 444.50px; top: 45px; position: absolute; justify-content: center; align-items: flex-start; gap: 62px; display: inline-flex">
         <div style="width: 193px; height: 173px; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: inline-flex">
             <div style="align-self: stretch; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 40px; display: inline-flex">
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Copyright con copyleft -->
-    <div style="left: 50%; top: 268px; position: absolute; transform: translateX(-50%); justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+    <div style="left: 50%; bottom: 20px; position: absolute; transform: translateX(-50%); justify-content: center; align-items: center; gap: 10px; display: inline-flex">
         <div style="width: 20px; height: 20px; position: relative;">
             <!-- Símbolo de copyleft (C invertido) -->
             <div style="width: 20px; height: 20px; border: 2px solid white; border-radius: 50%; position: relative; transform: scaleY(-1);">
