--- a/AutoClick/wwwroot/css/anunciar-auto.css
+++ b/AutoClick/wwwroot/css/anunciar-auto.css
@@ -159,6 +159,15 @@
     margin: 0 0 32px 0;
 }
 
+/* Section Divider - línea de separación entre secciones */
+.section-divider {
+    width: 100%;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.25);
+    margin: 32px 0;
+    border: none;
+}
+
 .form-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
