Menu Responsive y cambios en vista index responsive

--- a/AutoClick/Pages/Index.cshtml
+++ b/AutoClick/Pages/Index.cshtml
@@ -738,7 +738,7 @@
     <!-- Autos Destacados - Responsive -->
     <div class="index-section-responsive" style="display: none;">
         <div class="index-section-header">
-            <div class="index-section-title">Autos destacados</div>
+            <div class="index-section-title">Autos destacados<span class="swipe-hint">‹‹DESLICE</span></div>
         </div>
         <div class="index-cards-scroll-container">
             <div class="index-cards-scroll-wrapper">
@@ -779,7 +779,7 @@
     <!-- Recién Vistos - Responsive -->
     <div class="index-section-responsive" style="display: none;">
         <div class="index-section-header">
-            <div class="index-section-title">Recién vistos</div>
+            <div class="index-section-title">Recién vistos<span class="swipe-hint">‹‹DESLICE</span></div>
         </div>
         <div class="index-cards-scroll-container">
             <div class="index-cards-scroll-wrapper">
@@ -818,7 +818,7 @@
     <!-- Autos Guardados - Responsive -->
     <div class="index-section-responsive" style="display: none;">
         <div class="index-section-header">
-            <div class="index-section-title">Autos guardados</div>
+            <div class="index-section-title">Autos guardados<span class="swipe-hint">‹‹DESLICE</span></div>
         </div>
         <div class="index-cards-scroll-container">
             <div class="index-cards-scroll-wrapper">
@@ -857,7 +857,7 @@
     <!-- Explorar Todos los Autos - Responsive -->
     <div class="index-section-responsive" style="display: none;">
         <div class="index-section-header">
-            <div class="index-section-title">Explorar todos los autos</div>
+            <div class="index-section-title">Explorar todos los autos<span class="swipe-hint">‹‹DESLICE</span></div>
         </div>
         <div class="index-cards-scroll-container">
             <div class="index-cards-scroll-wrapper">
