--- a/AutoClick/wwwroot/css/index-responsive.css
+++ b/AutoClick/wwwroot/css/index-responsive.css
@@ -131,6 +131,18 @@
         font-size: 20px;
         font-family: 'Montserrat', sans-serif;
         font-weight: 700;
+        position: relative;
+        width: 100%;
+        display: block;
+    }
+    
+    .index-section-title .swipe-hint {
+        color: rgba(255, 255, 255, 0.6);
+        font-size: 14px;
+        font-weight: 400;
+        float: right;
+        font-family: 'Montserrat', sans-serif;
+        letter-spacing: 0.5px;
     }
     
     /* Horizontal scroll container */
@@ -537,6 +549,17 @@
     
     .index-section-title {
         font-size: 24px;
+        width: 100%;
+        display: block;
+    }
+    
+    .index-section-title .swipe-hint {
+        color: rgba(255, 255, 255, 0.6);
+        font-size: 16px;
+        font-weight: 400;
+        float: right;
+        font-family: 'Montserrat', sans-serif;
+        letter-spacing: 0.5px;
     }
     
     .index-cards-scroll-container {
